--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
+    "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
