--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ lerna-debug.log*
 .pnpm-debug.log*
 package.json
 package-lock.json
+../client/package-lock.json
+../client/package.json
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
