--- a/client/.gitignore
+++ b/client/.gitignore
@@ -13,6 +13,8 @@ dist-ssr
 *.local
 package.json
 package-lock.json
+../client/package-lock.json
+../client/package.json
 
 # Editor directories and files
 .vscode/*
