--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
-    "@toolpad/core": "^0.10.0",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@toolpad/core": "^0.11.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
@@ -23,7 +24,9 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.0.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
