--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "@mui/x-data-grid": "^7.24.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@toolpad/core": "^0.11.0",
     "axios": "^1.7.9",
