--- a/.gitignore
+++ b/.gitignore
@@ -76,11 +76,13 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
+.env*
 .env.development.local
 .env.test.local
 .env.production.local
 .env.local
+.env.root
+server/.env.backend
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
