--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
