--- a/client/package.json
+++ b/client/package.json
@@ -18,16 +18,18 @@
     "@mui/x-data-grid": "^7.24.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@toolpad/core": "^0.11.0",
-    "axios": "^1.7.9",
+    "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
