--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,15 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@mui/x-data-grid": "^7.24.1",
+    "@react-pdf-viewer/core": "^2.6.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@toolpad/core": "^0.11.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
     "mdb-react-ui-kit": "^9.0.0",
+    "pdfjs-dist": "^2.6.347",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
