--- a/client/package.json
+++ b/client/package.json
@@ -19,19 +19,23 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@mui/x-data-grid": "^7.24.1",
-    "@react-pdf-viewer/core": "^2.6.0",
+    "@pdftron/webviewer": "^11.3.0",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/highlight": "^3.12.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@toolpad/core": "^0.11.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
     "mdb-react-ui-kit": "^9.0.0",
-    "pdfjs-dist": "^2.6.347",
+    "pdfjs-dist": "^2.16.105",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-pdf": "^9.2.1",
+    "react-pdf-highlighter": "^8.0.0-rc.0",
+    "react-pdf-highlighter-extended": "^8.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "redux": "^5.0.1",
