--- a/client/package.json
+++ b/client/package.json
@@ -23,21 +23,25 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/highlight": "^3.12.0",
+    "@react-pdf-viewer/thumbnail": "^3.12.0",
+    "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@toolpad/core": "^0.11.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
+    "konva": "^9.3.20",
     "mdb-react-ui-kit": "^9.0.0",
-    "pdfjs-dist": "^2.16.105",
+    "pdfjs-dist": "^3.9.179",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
-    "react-pdf": "^9.2.1",
+    "react-konva": "^18.2.10",
+    "react-pdf": "^7.7.3",
     "react-pdf-highlighter": "^8.0.0-rc.0",
     "react-pdf-highlighter-extended": "^8.1.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^6.30.0",
     "redux": "^5.0.1",
     "xlsx": "^0.18.5"
   },
