--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
+    "jwt-decode": "^4.0.0",
     "konva": "^9.3.20",
     "mdb-react-ui-kit": "^9.0.0",
     "pdfjs-dist": "^3.9.179",
