--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "@mui/x-charts": "^8.0.0",
     "@mui/x-data-grid": "^7.24.1",
     "@pdftron/webviewer": "^11.3.0",
     "@react-pdf-viewer/core": "^3.12.0",
