--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ client/package.json
 server/uploads/
 client/package.json
 client/package.json
+modmark-79380-firebase-adminsdk-fbsvc-01eddb138f.json
