--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "react-pdf-highlighter-extended": "^8.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
+    "recharts": "^2.15.3",
     "redux": "^5.0.1",
     "xlsx": "^0.18.5"
   },
